parser/rule.output
Terminals unused in grammar

   kFILE
   kIN
   kLABEL
   kNIL
   cFALSE
   cTRUE
   cMAXINT
   cBOOLEAN
   tINTEGER
   tCHAR
   tREAL
   tBOOLEAN
   tTEXT
   fABS
   fSQR
   fSQRT
   pREADLN
   pWRITE
   pWRITELN
   oQUOTE
   oARROW


状态 29 conflicts: 2 shift/reduce
状态 268 conflicts: 1 shift/reduce
状态 283 conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: first_act_at_prog program_head sub_program oDOT

    2 first_act_at_prog: %empty

    3 program_head: kPROGRAM yNAME oSEMI
    4             | error oSEMI

    5 $@1: %empty

    6 sub_program: routine_head $@1 routine_body

    7 name_list: name_list oCOMMA yNAME
    8          | yNAME
    9          | yNAME error oSEMI
   10          | yNAME error oCOMMA

   11 sub_routine: routine_head routine_body

   12 routine_head: const_part type_part var_part routine_part

   13 const_part: %empty
   14           | kCONST const_expr_list

   15 const_expr_list: const_expr_list yNAME oEQUAL const_value oSEMI
   16                | yNAME oEQUAL const_value oSEMI

   17 const_value: cINTEGER
   18            | cREAL
   19            | cCHAR
   20            | cSTRING
   21            | SYS_CON

   22 type_part: %empty
   23          | kTYPE type_decl_list

   24 type_decl_list: type_decl_list type_definition
   25               | type_definition

   26 type_definition: yNAME oEQUAL type_decl oSEMI

   27 type_decl: simple_type_decl
   28          | array_type_decl
   29          | record_type_decl

   30 array_type_decl: kARRAY oLB simple_type_decl oRB kOF type_decl

   31 record_type_decl: kRECORD field_decl_list kEND

   32 field_decl_list: field_decl_list field_decl
   33                | field_decl

   34 field_decl: name_list oCOLON type_decl oSEMI

   35 simple_type_decl: SYS_TYPE
   36                 | yNAME
   37                 | oLP name_list oRP
   38                 | const_value oDOTDOT const_value
   39                 | oMINUS const_value oDOTDOT const_value
   40                 | oMINUS const_value oDOTDOT oMINUS const_value
   41                 | yNAME oDOTDOT yNAME

   42 var_part: %empty
   43         | kVAR var_decl_list

   44 var_decl_list: var_decl_list var_decl
   45              | var_decl

   46 var_decl: name_list oCOLON type_decl oSEMI

   47 routine_part: %empty
   48             | routine_part function_decl
   49             | routine_part procedure_decl
   50             | function_decl
   51             | procedure_decl

   52 function_decl: function_head oSEMI sub_routine oSEMI

   53 $@2: %empty

   54 function_head: kFUNCTION $@2 yNAME parameters oCOLON simple_type_decl

   55 procedure_decl: procedure_head oSEMI sub_routine oSEMI

   56 $@3: %empty

   57 procedure_head: kPROCEDURE $@3 yNAME parameters

   58 parameters: %empty
   59           | oLP para_decl_list oRP

   60 para_decl_list: para_decl_list oSEMI para_type_list
   61               | para_type_list

   62 para_type_list: val_para_list oCOLON simple_type_decl
   63               | var_para_list oCOLON simple_type_decl

   64 val_para_list: name_list

   65 var_para_list: kVAR name_list

   66 routine_body: compound_stmt

   67 stmt_list: %empty
   68          | stmt_list stmt oSEMI
   69          | stmt_list error oSEMI

   70 stmt: %empty
   71     | assign_stmt
   72     | routine_stmt
   73     | compound_stmt
   74     | if_stmt
   75     | repeat_stmt
   76     | while_stmt
   77     | for_stmt
   78     | case_stmt

   79 assign_stmt: yNAME oASSIGN expression

   80 $@4: %empty

   81 $@5: %empty

   82 assign_stmt: yNAME oLB $@4 expression oRB $@5 oASSIGN expression

   83 $@6: %empty

   84 assign_stmt: yNAME oDOT yNAME $@6 oASSIGN expression

   85 $@7: %empty

   86 routine_stmt: yNAME $@7 oLP args_list oRP
   87             | SYS_FUNCT
   88             | SYS_PROC

   89 $@8: %empty

   90 routine_stmt: SYS_FUNCT $@8 oLP args_list oRP

   91 $@9: %empty

   92 routine_stmt: SYS_PROC $@9 oLP args_list oRP
   93             | pREAD oLP factor oRP

   94 $@10: %empty

   95 compound_stmt: kBEGIN $@10 stmt_list kEND

   96 $@11: %empty

   97 $@12: %empty

   98 $@13: %empty

   99 if_stmt: kIF $@11 expression kTHEN $@12 stmt $@13 else_clause

  100 $@14: %empty

  101 $@15: %empty

  102 if_stmt: kIF error $@14 kTHEN $@15 stmt else_clause

  103 else_clause: %empty
  104            | kELSE stmt

  105 $@16: %empty

  106 repeat_stmt: kREPEAT $@16 stmt kUNTIL expression

  107 $@17: %empty

  108 $@18: %empty

  109 while_stmt: kWHILE $@17 expression kDO $@18 stmt

  110 $@19: %empty

  111 $@20: %empty

  112 for_stmt: kFOR yNAME oASSIGN expression $@19 direction expression kDO $@20 stmt

  113 direction: kTO
  114          | kDOWNTO

  115 $@21: %empty

  116 $@22: %empty

  117 case_stmt: kCASE $@21 expression kOF case_expr_list $@22 kEND

  118 case_expr_list: case_expr_list case_expr
  119               | case_expr

  120 $@23: %empty

  121 $@24: %empty

  122 case_expr: const_value $@23 oCOLON stmt $@24 oSEMI

  123 $@25: %empty

  124 $@26: %empty

  125 case_expr: yNAME $@25 oCOLON stmt $@26 oSEMI

  126 expression: expression oGE expr
  127           | expression oGT expr
  128           | expression oLE expr
  129           | expression oLT expr
  130           | expression oEQUAL expr
  131           | expression oUNEQU expr
  132           | expr

  133 expr: expr oPLUS term
  134     | expr oMINUS term
  135     | expr kOR term
  136     | term

  137 term: term oMUL factor
  138     | term oDIV factor
  139     | term kDIV factor
  140     | term kMOD factor
  141     | term kAND factor
  142     | factor

  143 factor: yNAME

  144 $@27: %empty

  145 factor: yNAME $@27 oLP args_list oRP
  146       | SYS_FUNCT

  147 $@28: %empty

  148 factor: SYS_FUNCT $@28 oLP args_list oRP
  149       | const_value
  150       | oLP expression oRP
  151       | kNOT factor
  152       | oMINUS factor

  153 $@29: %empty

  154 factor: yNAME oLB $@29 expression oRB
  155       | yNAME oDOT yNAME

  156 args_list: %empty
  157          | args_list oCOMMA expression
  158          | expression


Terminals, with rules where they appear

$end (0) 0
error (256) 4 9 10 69 102
kAND (258) 141
kARRAY (259) 30
kBEGIN (260) 95
kCASE (261) 117
kCONST (262) 14
kDIV (263) 139
kDO (264) 109 112
kDOWNTO (265) 114
kELSE (266) 104
kEND (267) 31 95 117
kFILE (268)
kFOR (269) 112
kFUNCTION (270) 54
kIF (271) 99 102
kIN (272)
kLABEL (273)
kMOD (274) 140
kNIL (275)
kNOT (276) 151
kOF (277) 30 117
kOR (278) 135
kPROCEDURE (279) 57
kPROGRAM (280) 3
kRECORD (281) 31
kREPEAT (282) 106
kTHEN (283) 99 102
kTO (284) 113
kTYPE (285) 23
kUNTIL (286) 106
kVAR (287) 43 65
kWHILE (288) 109
SYS_CON (289) 21
cFALSE (290)
cTRUE (291)
cMAXINT (292)
cSTRING (293) 20
cINTEGER (294) 17
cREAL (295) 18
cCHAR (296) 19
cBOOLEAN (297)
SYS_TYPE (298) 35
tINTEGER (299)
tCHAR (300)
tREAL (301)
tBOOLEAN (302)
tTEXT (303)
SYS_FUNCT (304) 87 90 146 148
fABS (305)
fSQR (306)
fSQRT (307)
SYS_PROC (308) 88 92
pREAD (309) 93
pREADLN (310)
pWRITE (311)
pWRITELN (312)
oPLUS (313) 133
oMINUS (314) 39 40 134 152
oMUL (315) 137
oDIV (316) 138
oEQUAL (317) 15 16 26 130
oASSIGN (318) 79 82 84 112
oUNEQU (319) 131
oLT (320) 129
oLE (321) 128
oGT (322) 127
oGE (323) 126
oCOMMA (324) 7 10 157
oSEMI (325) 3 4 9 15 16 26 34 46 52 55 60 68 69 122 125
oCOLON (326) 34 46 54 62 63 122 125
oQUOTE (327)
oDOT (328) 1 84 155
oDOTDOT (329) 38 39 40 41
oARROW (330)
oLP (331) 37 59 86 90 92 93 145 148 150
oRP (332) 37 59 86 90 92 93 145 148 150
oLB (333) 30 82 154
oRB (334) 30 82 154
yNAME (335) 3 7 8 9 10 15 16 26 36 41 54 57 79 82 84 86 112 125 143
    145 154 155


Nonterminals, with rules where they appear

$accept (81)
    左： 0
program (82)
    左： 1, 右： 0
first_act_at_prog (83)
    左： 2, 右： 1
program_head (84)
    左： 3 4, 右： 1
sub_program (85)
    左： 6, 右： 1
$@1 (86)
    左： 5, 右： 6
name_list (87)
    左： 7 8 9 10, 右： 7 34 37 46 64 65
sub_routine (88)
    左： 11, 右： 52 55
routine_head (89)
    左： 12, 右： 6 11
const_part (90)
    左： 13 14, 右： 12
const_expr_list (91)
    左： 15 16, 右： 14 15
const_value (92)
    左： 17 18 19 20 21, 右： 15 16 38 39 40 122 149
type_part (93)
    左： 22 23, 右： 12
type_decl_list (94)
    左： 24 25, 右： 23 24
type_definition (95)
    左： 26, 右： 24 25
type_decl (96)
    左： 27 28 29, 右： 26 30 34 46
array_type_decl (97)
    左： 30, 右： 28
record_type_decl (98)
    左： 31, 右： 29
field_decl_list (99)
    左： 32 33, 右： 31 32
field_decl (100)
    左： 34, 右： 32 33
simple_type_decl (101)
    左： 35 36 37 38 39 40 41, 右： 27 30 54 62 63
var_part (102)
    左： 42 43, 右： 12
var_decl_list (103)
    左： 44 45, 右： 43 44
var_decl (104)
    左： 46, 右： 44 45
routine_part (105)
    左： 47 48 49 50 51, 右： 12 48 49
function_decl (106)
    左： 52, 右： 48 50
function_head (107)
    左： 54, 右： 52
$@2 (108)
    左： 53, 右： 54
procedure_decl (109)
    左： 55, 右： 49 51
procedure_head (110)
    左： 57, 右： 55
$@3 (111)
    左： 56, 右： 57
parameters (112)
    左： 58 59, 右： 54 57
para_decl_list (113)
    左： 60 61, 右： 59 60
para_type_list (114)
    左： 62 63, 右： 60 61
val_para_list (115)
    左： 64, 右： 62
var_para_list (116)
    左： 65, 右： 63
routine_body (117)
    左： 66, 右： 6 11
stmt_list (118)
    左： 67 68 69, 右： 68 69 95
stmt (119)
    左： 70 71 72 73 74 75 76 77 78, 右： 68 99 102 104 106 109
    112 122 125
assign_stmt (120)
    左： 79 82 84, 右： 71
$@4 (121)
    左： 80, 右： 82
$@5 (122)
    左： 81, 右： 82
$@6 (123)
    左： 83, 右： 84
routine_stmt (124)
    左： 86 87 88 90 92 93, 右： 72
$@7 (125)
    左： 85, 右： 86
$@8 (126)
    左： 89, 右： 90
$@9 (127)
    左： 91, 右： 92
compound_stmt (128)
    左： 95, 右： 66 73
$@10 (129)
    左： 94, 右： 95
if_stmt (130)
    左： 99 102, 右： 74
$@11 (131)
    左： 96, 右： 99
$@12 (132)
    左： 97, 右： 99
$@13 (133)
    左： 98, 右： 99
$@14 (134)
    左： 100, 右： 102
$@15 (135)
    左： 101, 右： 102
else_clause (136)
    左： 103 104, 右： 99 102
repeat_stmt (137)
    左： 106, 右： 75
$@16 (138)
    左： 105, 右： 106
while_stmt (139)
    左： 109, 右： 76
$@17 (140)
    左： 107, 右： 109
$@18 (141)
    左： 108, 右： 109
for_stmt (142)
    左： 112, 右： 77
$@19 (143)
    左： 110, 右： 112
$@20 (144)
    左： 111, 右： 112
direction (145)
    左： 113 114, 右： 112
case_stmt (146)
    左： 117, 右： 78
$@21 (147)
    左： 115, 右： 117
$@22 (148)
    左： 116, 右： 117
case_expr_list (149)
    左： 118 119, 右： 117 118
case_expr (150)
    左： 122 125, 右： 118 119
$@23 (151)
    左： 120, 右： 122
$@24 (152)
    左： 121, 右： 122
$@25 (153)
    左： 123, 右： 125
$@26 (154)
    左： 124, 右： 125
expression (155)
    左： 126 127 128 129 130 131 132, 右： 79 82 84 99 106 109
    112 117 126 127 128 129 130 131 150 154 157 158
expr (156)
    左： 133 134 135 136, 右： 126 127 128 129 130 131 132 133
    134 135
term (157)
    左： 137 138 139 140 141 142, 右： 133 134 135 136 137 138
    139 140 141
factor (158)
    左： 143 145 146 148 149 150 151 152 154 155, 右： 93 137 138
    139 140 141 142 151 152
$@27 (159)
    左： 144, 右： 145
$@28 (160)
    左： 147, 右： 148
$@29 (161)
    左： 153, 右： 154
args_list (162)
    左： 156 157 158, 右： 86 90 92 145 148 157


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (first_act_at_prog)

    program            转到状态 1
    first_act_at_prog  转到状态 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: first_act_at_prog . program_head sub_program oDOT

    error     shift, and go to state 4
    kPROGRAM  shift, and go to state 5

    program_head  转到状态 6


State 3

    0 $accept: program $end .

    $default  接受


State 4

    4 program_head: error . oSEMI

    oSEMI  shift, and go to state 7


State 5

    3 program_head: kPROGRAM . yNAME oSEMI

    yNAME  shift, and go to state 8


State 6

    1 program: first_act_at_prog program_head . sub_program oDOT

    kCONST  shift, and go to state 9

    $default  reduce using rule 13 (const_part)

    sub_program   转到状态 10
    routine_head  转到状态 11
    const_part    转到状态 12


State 7

    4 program_head: error oSEMI .

    $default  reduce using rule 4 (program_head)


State 8

    3 program_head: kPROGRAM yNAME . oSEMI

    oSEMI  shift, and go to state 13


State 9

   14 const_part: kCONST . const_expr_list

    yNAME  shift, and go to state 14

    const_expr_list  转到状态 15


State 10

    1 program: first_act_at_prog program_head sub_program . oDOT

    oDOT  shift, and go to state 16


State 11

    6 sub_program: routine_head . $@1 routine_body

    $default  reduce using rule 5 ($@1)

    $@1  转到状态 17


State 12

   12 routine_head: const_part . type_part var_part routine_part

    kTYPE  shift, and go to state 18

    $default  reduce using rule 22 (type_part)

    type_part  转到状态 19


State 13

    3 program_head: kPROGRAM yNAME oSEMI .

    $default  reduce using rule 3 (program_head)


State 14

   16 const_expr_list: yNAME . oEQUAL const_value oSEMI

    oEQUAL  shift, and go to state 20


State 15

   14 const_part: kCONST const_expr_list .
   15 const_expr_list: const_expr_list . yNAME oEQUAL const_value oSEMI

    yNAME  shift, and go to state 21

    $default  reduce using rule 14 (const_part)


State 16

    1 program: first_act_at_prog program_head sub_program oDOT .

    $default  reduce using rule 1 (program)


State 17

    6 sub_program: routine_head $@1 . routine_body

    kBEGIN  shift, and go to state 22

    routine_body   转到状态 23
    compound_stmt  转到状态 24


State 18

   23 type_part: kTYPE . type_decl_list

    yNAME  shift, and go to state 25

    type_decl_list   转到状态 26
    type_definition  转到状态 27


State 19

   12 routine_head: const_part type_part . var_part routine_part

    kVAR  shift, and go to state 28

    $default  reduce using rule 42 (var_part)

    var_part  转到状态 29


State 20

   16 const_expr_list: yNAME oEQUAL . const_value oSEMI

    SYS_CON   shift, and go to state 30
    cSTRING   shift, and go to state 31
    cINTEGER  shift, and go to state 32
    cREAL     shift, and go to state 33
    cCHAR     shift, and go to state 34

    const_value  转到状态 35


State 21

   15 const_expr_list: const_expr_list yNAME . oEQUAL const_value oSEMI

    oEQUAL  shift, and go to state 36


State 22

   95 compound_stmt: kBEGIN . $@10 stmt_list kEND

    $default  reduce using rule 94 ($@10)

    $@10  转到状态 37


State 23

    6 sub_program: routine_head $@1 routine_body .

    $default  reduce using rule 6 (sub_program)


State 24

   66 routine_body: compound_stmt .

    $default  reduce using rule 66 (routine_body)


State 25

   26 type_definition: yNAME . oEQUAL type_decl oSEMI

    oEQUAL  shift, and go to state 38


State 26

   23 type_part: kTYPE type_decl_list .
   24 type_decl_list: type_decl_list . type_definition

    yNAME  shift, and go to state 25

    $default  reduce using rule 23 (type_part)

    type_definition  转到状态 39


State 27

   25 type_decl_list: type_definition .

    $default  reduce using rule 25 (type_decl_list)


State 28

   43 var_part: kVAR . var_decl_list

    yNAME  shift, and go to state 40

    name_list      转到状态 41
    var_decl_list  转到状态 42
    var_decl       转到状态 43


State 29

   12 routine_head: const_part type_part var_part . routine_part

    kFUNCTION   shift, and go to state 44
    kPROCEDURE  shift, and go to state 45

    kFUNCTION   [reduce using rule 47 (routine_part)]
    kPROCEDURE  [reduce using rule 47 (routine_part)]
    $default    reduce using rule 47 (routine_part)

    routine_part    转到状态 46
    function_decl   转到状态 47
    function_head   转到状态 48
    procedure_decl  转到状态 49
    procedure_head  转到状态 50


State 30

   21 const_value: SYS_CON .

    $default  reduce using rule 21 (const_value)


State 31

   20 const_value: cSTRING .

    $default  reduce using rule 20 (const_value)


State 32

   17 const_value: cINTEGER .

    $default  reduce using rule 17 (const_value)


State 33

   18 const_value: cREAL .

    $default  reduce using rule 18 (const_value)


State 34

   19 const_value: cCHAR .

    $default  reduce using rule 19 (const_value)


State 35

   16 const_expr_list: yNAME oEQUAL const_value . oSEMI

    oSEMI  shift, and go to state 51


State 36

   15 const_expr_list: const_expr_list yNAME oEQUAL . const_value oSEMI

    SYS_CON   shift, and go to state 30
    cSTRING   shift, and go to state 31
    cINTEGER  shift, and go to state 32
    cREAL     shift, and go to state 33
    cCHAR     shift, and go to state 34

    const_value  转到状态 52


State 37

   95 compound_stmt: kBEGIN $@10 . stmt_list kEND

    $default  reduce using rule 67 (stmt_list)

    stmt_list  转到状态 53


State 38

   26 type_definition: yNAME oEQUAL . type_decl oSEMI

    kARRAY    shift, and go to state 54
    kRECORD   shift, and go to state 55
    SYS_CON   shift, and go to state 30
    cSTRING   shift, and go to state 31
    cINTEGER  shift, and go to state 32
    cREAL     shift, and go to state 33
    cCHAR     shift, and go to state 34
    SYS_TYPE  shift, and go to state 56
    oMINUS    shift, and go to state 57
    oLP       shift, and go to state 58
    yNAME     shift, and go to state 59

    const_value       转到状态 60
    type_decl         转到状态 61
    array_type_decl   转到状态 62
    record_type_decl  转到状态 63
    simple_type_decl  转到状态 64


State 39

   24 type_decl_list: type_decl_list type_definition .

    $default  reduce using rule 24 (type_decl_list)


State 40

    8 name_list: yNAME .
    9          | yNAME . error oSEMI
   10          | yNAME . error oCOMMA

    error  shift, and go to state 65

    oCOMMA  reduce using rule 8 (name_list)
    oCOLON  reduce using rule 8 (name_list)
    oRP     reduce using rule 8 (name_list)


State 41

    7 name_list: name_list . oCOMMA yNAME
   46 var_decl: name_list . oCOLON type_decl oSEMI

    oCOMMA  shift, and go to state 66
    oCOLON  shift, and go to state 67


State 42

   43 var_part: kVAR var_decl_list .
   44 var_decl_list: var_decl_list . var_decl

    yNAME  shift, and go to state 40

    $default  reduce using rule 43 (var_part)

    name_list  转到状态 41
    var_decl   转到状态 68


State 43

   45 var_decl_list: var_decl .

    $default  reduce using rule 45 (var_decl_list)


State 44

   54 function_head: kFUNCTION . $@2 yNAME parameters oCOLON simple_type_decl

    $default  reduce using rule 53 ($@2)

    $@2  转到状态 69


State 45

   57 procedure_head: kPROCEDURE . $@3 yNAME parameters

    $default  reduce using rule 56 ($@3)

    $@3  转到状态 70


State 46

   12 routine_head: const_part type_part var_part routine_part .
   48 routine_part: routine_part . function_decl
   49             | routine_part . procedure_decl

    kFUNCTION   shift, and go to state 44
    kPROCEDURE  shift, and go to state 45

    $default  reduce using rule 12 (routine_head)

    function_decl   转到状态 71
    function_head   转到状态 48
    procedure_decl  转到状态 72
    procedure_head  转到状态 50


State 47

   50 routine_part: function_decl .

    $default  reduce using rule 50 (routine_part)


State 48

   52 function_decl: function_head . oSEMI sub_routine oSEMI

    oSEMI  shift, and go to state 73


State 49

   51 routine_part: procedure_decl .

    $default  reduce using rule 51 (routine_part)


State 50

   55 procedure_decl: procedure_head . oSEMI sub_routine oSEMI

    oSEMI  shift, and go to state 74


State 51

   16 const_expr_list: yNAME oEQUAL const_value oSEMI .

    $default  reduce using rule 16 (const_expr_list)


State 52

   15 const_expr_list: const_expr_list yNAME oEQUAL const_value . oSEMI

    oSEMI  shift, and go to state 75


State 53

   68 stmt_list: stmt_list . stmt oSEMI
   69          | stmt_list . error oSEMI
   95 compound_stmt: kBEGIN $@10 stmt_list . kEND

    error      shift, and go to state 76
    kBEGIN     shift, and go to state 22
    kCASE      shift, and go to state 77
    kEND       shift, and go to state 78
    kFOR       shift, and go to state 79
    kIF        shift, and go to state 80
    kREPEAT    shift, and go to state 81
    kWHILE     shift, and go to state 82
    SYS_FUNCT  shift, and go to state 83
    SYS_PROC   shift, and go to state 84
    pREAD      shift, and go to state 85
    yNAME      shift, and go to state 86

    oSEMI  reduce using rule 70 (stmt)

    stmt           转到状态 87
    assign_stmt    转到状态 88
    routine_stmt   转到状态 89
    compound_stmt  转到状态 90
    if_stmt        转到状态 91
    repeat_stmt    转到状态 92
    while_stmt     转到状态 93
    for_stmt       转到状态 94
    case_stmt      转到状态 95


State 54

   30 array_type_decl: kARRAY . oLB simple_type_decl oRB kOF type_decl

    oLB  shift, and go to state 96


State 55

   31 record_type_decl: kRECORD . field_decl_list kEND

    yNAME  shift, and go to state 40

    name_list        转到状态 97
    field_decl_list  转到状态 98
    field_decl       转到状态 99


State 56

   35 simple_type_decl: SYS_TYPE .

    $default  reduce using rule 35 (simple_type_decl)


State 57

   39 simple_type_decl: oMINUS . const_value oDOTDOT const_value
   40                 | oMINUS . const_value oDOTDOT oMINUS const_value

    SYS_CON   shift, and go to state 30
    cSTRING   shift, and go to state 31
    cINTEGER  shift, and go to state 32
    cREAL     shift, and go to state 33
    cCHAR     shift, and go to state 34

    const_value  转到状态 100


State 58

   37 simple_type_decl: oLP . name_list oRP

    yNAME  shift, and go to state 40

    name_list  转到状态 101


State 59

   36 simple_type_decl: yNAME .
   41                 | yNAME . oDOTDOT yNAME

    oDOTDOT  shift, and go to state 102

    $default  reduce using rule 36 (simple_type_decl)


State 60

   38 simple_type_decl: const_value . oDOTDOT const_value

    oDOTDOT  shift, and go to state 103


State 61

   26 type_definition: yNAME oEQUAL type_decl . oSEMI

    oSEMI  shift, and go to state 104


State 62

   28 type_decl: array_type_decl .

    $default  reduce using rule 28 (type_decl)


State 63

   29 type_decl: record_type_decl .

    $default  reduce using rule 29 (type_decl)


State 64

   27 type_decl: simple_type_decl .

    $default  reduce using rule 27 (type_decl)


State 65

    9 name_list: yNAME error . oSEMI
   10          | yNAME error . oCOMMA

    oCOMMA  shift, and go to state 105
    oSEMI   shift, and go to state 106


State 66

    7 name_list: name_list oCOMMA . yNAME

    yNAME  shift, and go to state 107


State 67

   46 var_decl: name_list oCOLON . type_decl oSEMI

    kARRAY    shift, and go to state 54
    kRECORD   shift, and go to state 55
    SYS_CON   shift, and go to state 30
    cSTRING   shift, and go to state 31
    cINTEGER  shift, and go to state 32
    cREAL     shift, and go to state 33
    cCHAR     shift, and go to state 34
    SYS_TYPE  shift, and go to state 56
    oMINUS    shift, and go to state 57
    oLP       shift, and go to state 58
    yNAME     shift, and go to state 59

    const_value       转到状态 60
    type_decl         转到状态 108
    array_type_decl   转到状态 62
    record_type_decl  转到状态 63
    simple_type_decl  转到状态 64


State 68

   44 var_decl_list: var_decl_list var_decl .

    $default  reduce using rule 44 (var_decl_list)


State 69

   54 function_head: kFUNCTION $@2 . yNAME parameters oCOLON simple_type_decl

    yNAME  shift, and go to state 109


State 70

   57 procedure_head: kPROCEDURE $@3 . yNAME parameters

    yNAME  shift, and go to state 110


State 71

   48 routine_part: routine_part function_decl .

    $default  reduce using rule 48 (routine_part)


State 72

   49 routine_part: routine_part procedure_decl .

    $default  reduce using rule 49 (routine_part)


State 73

   52 function_decl: function_head oSEMI . sub_routine oSEMI

    kCONST  shift, and go to state 9

    $default  reduce using rule 13 (const_part)

    sub_routine   转到状态 111
    routine_head  转到状态 112
    const_part    转到状态 12


State 74

   55 procedure_decl: procedure_head oSEMI . sub_routine oSEMI

    kCONST  shift, and go to state 9

    $default  reduce using rule 13 (const_part)

    sub_routine   转到状态 113
    routine_head  转到状态 112
    const_part    转到状态 12


State 75

   15 const_expr_list: const_expr_list yNAME oEQUAL const_value oSEMI .

    $default  reduce using rule 15 (const_expr_list)


State 76

   69 stmt_list: stmt_list error . oSEMI

    oSEMI  shift, and go to state 114


State 77

  117 case_stmt: kCASE . $@21 expression kOF case_expr_list $@22 kEND

    $default  reduce using rule 115 ($@21)

    $@21  转到状态 115


State 78

   95 compound_stmt: kBEGIN $@10 stmt_list kEND .

    $default  reduce using rule 95 (compound_stmt)


State 79

  112 for_stmt: kFOR . yNAME oASSIGN expression $@19 direction expression kDO $@20 stmt

    yNAME  shift, and go to state 116


State 80

   99 if_stmt: kIF . $@11 expression kTHEN $@12 stmt $@13 else_clause
  102        | kIF . error $@14 kTHEN $@15 stmt else_clause

    error  shift, and go to state 117

    kNOT       reduce using rule 96 ($@11)
    SYS_CON    reduce using rule 96 ($@11)
    cSTRING    reduce using rule 96 ($@11)
    cINTEGER   reduce using rule 96 ($@11)
    cREAL      reduce using rule 96 ($@11)
    cCHAR      reduce using rule 96 ($@11)
    SYS_FUNCT  reduce using rule 96 ($@11)
    oMINUS     reduce using rule 96 ($@11)
    oLP        reduce using rule 96 ($@11)
    yNAME      reduce using rule 96 ($@11)

    $@11  转到状态 118


State 81

  106 repeat_stmt: kREPEAT . $@16 stmt kUNTIL expression

    $default  reduce using rule 105 ($@16)

    $@16  转到状态 119


State 82

  109 while_stmt: kWHILE . $@17 expression kDO $@18 stmt

    $default  reduce using rule 107 ($@17)

    $@17  转到状态 120


State 83

   87 routine_stmt: SYS_FUNCT .
   90             | SYS_FUNCT . $@8 oLP args_list oRP

    oLP       reduce using rule 89 ($@8)
    $default  reduce using rule 87 (routine_stmt)

    $@8  转到状态 121


State 84

   88 routine_stmt: SYS_PROC .
   92             | SYS_PROC . $@9 oLP args_list oRP

    oLP       reduce using rule 91 ($@9)
    $default  reduce using rule 88 (routine_stmt)

    $@9  转到状态 122


State 85

   93 routine_stmt: pREAD . oLP factor oRP

    oLP  shift, and go to state 123


State 86

   79 assign_stmt: yNAME . oASSIGN expression
   82            | yNAME . oLB $@4 expression oRB $@5 oASSIGN expression
   84            | yNAME . oDOT yNAME $@6 oASSIGN expression
   86 routine_stmt: yNAME . $@7 oLP args_list oRP

    oASSIGN  shift, and go to state 124
    oDOT     shift, and go to state 125
    oLB      shift, and go to state 126

    $default  reduce using rule 85 ($@7)

    $@7  转到状态 127


State 87

   68 stmt_list: stmt_list stmt . oSEMI

    oSEMI  shift, and go to state 128


State 88

   71 stmt: assign_stmt .

    $default  reduce using rule 71 (stmt)


State 89

   72 stmt: routine_stmt .

    $default  reduce using rule 72 (stmt)


State 90

   73 stmt: compound_stmt .

    $default  reduce using rule 73 (stmt)


State 91

   74 stmt: if_stmt .

    $default  reduce using rule 74 (stmt)


State 92

   75 stmt: repeat_stmt .

    $default  reduce using rule 75 (stmt)


State 93

   76 stmt: while_stmt .

    $default  reduce using rule 76 (stmt)


State 94

   77 stmt: for_stmt .

    $default  reduce using rule 77 (stmt)


State 95

   78 stmt: case_stmt .

    $default  reduce using rule 78 (stmt)


State 96

   30 array_type_decl: kARRAY oLB . simple_type_decl oRB kOF type_decl

    SYS_CON   shift, and go to state 30
    cSTRING   shift, and go to state 31
    cINTEGER  shift, and go to state 32
    cREAL     shift, and go to state 33
    cCHAR     shift, and go to state 34
    SYS_TYPE  shift, and go to state 56
    oMINUS    shift, and go to state 57
    oLP       shift, and go to state 58
    yNAME     shift, and go to state 59

    const_value       转到状态 60
    simple_type_decl  转到状态 129


State 97

    7 name_list: name_list . oCOMMA yNAME
   34 field_decl: name_list . oCOLON type_decl oSEMI

    oCOMMA  shift, and go to state 66
    oCOLON  shift, and go to state 130


State 98

   31 record_type_decl: kRECORD field_decl_list . kEND
   32 field_decl_list: field_decl_list . field_decl

    kEND   shift, and go to state 131
    yNAME  shift, and go to state 40

    name_list   转到状态 97
    field_decl  转到状态 132


State 99

   33 field_decl_list: field_decl .

    $default  reduce using rule 33 (field_decl_list)


State 100

   39 simple_type_decl: oMINUS const_value . oDOTDOT const_value
   40                 | oMINUS const_value . oDOTDOT oMINUS const_value

    oDOTDOT  shift, and go to state 133


State 101

    7 name_list: name_list . oCOMMA yNAME
   37 simple_type_decl: oLP name_list . oRP

    oCOMMA  shift, and go to state 66
    oRP     shift, and go to state 134


State 102

   41 simple_type_decl: yNAME oDOTDOT . yNAME

    yNAME  shift, and go to state 135


State 103

   38 simple_type_decl: const_value oDOTDOT . const_value

    SYS_CON   shift, and go to state 30
    cSTRING   shift, and go to state 31
    cINTEGER  shift, and go to state 32
    cREAL     shift, and go to state 33
    cCHAR     shift, and go to state 34

    const_value  转到状态 136


State 104

   26 type_definition: yNAME oEQUAL type_decl oSEMI .

    $default  reduce using rule 26 (type_definition)


State 105

   10 name_list: yNAME error oCOMMA .

    $default  reduce using rule 10 (name_list)


State 106

    9 name_list: yNAME error oSEMI .

    $default  reduce using rule 9 (name_list)


State 107

    7 name_list: name_list oCOMMA yNAME .

    $default  reduce using rule 7 (name_list)


State 108

   46 var_decl: name_list oCOLON type_decl . oSEMI

    oSEMI  shift, and go to state 137


State 109

   54 function_head: kFUNCTION $@2 yNAME . parameters oCOLON simple_type_decl

    oLP  shift, and go to state 138

    $default  reduce using rule 58 (parameters)

    parameters  转到状态 139


State 110

   57 procedure_head: kPROCEDURE $@3 yNAME . parameters

    oLP  shift, and go to state 138

    $default  reduce using rule 58 (parameters)

    parameters  转到状态 140


State 111

   52 function_decl: function_head oSEMI sub_routine . oSEMI

    oSEMI  shift, and go to state 141


State 112

   11 sub_routine: routine_head . routine_body

    kBEGIN  shift, and go to state 22

    routine_body   转到状态 142
    compound_stmt  转到状态 24


State 113

   55 procedure_decl: procedure_head oSEMI sub_routine . oSEMI

    oSEMI  shift, and go to state 143


State 114

   69 stmt_list: stmt_list error oSEMI .

    $default  reduce using rule 69 (stmt_list)


State 115

  117 case_stmt: kCASE $@21 . expression kOF case_expr_list $@22 kEND
